--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   supabase_flutter: ^1.4.1
+  firebase_core: ^2.7.1
 
 dev_dependencies:
   flutter_test:
