--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   supabase_flutter: ^1.4.1
   firebase_core: ^2.7.1
+  cloud_firestore: ^4.4.4
 
 dev_dependencies:
   flutter_test:
