--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   animation_list: ^2.2.1
   auto_animated: ^3.1.0
   flutter_staggered_animations: ^1.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
