--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   auto_animated: ^3.1.0
   flutter_staggered_animations: ^1.0.0
   shimmer: ^2.0.0
+  flutter_fadein: ^2.0.0
+  flutter_animate: ^4.1.0
 
 dev_dependencies:
   flutter_test:
