added institutes card with animations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_fadein: ^2.0.0
   flutter_animate: ^4.1.0
+  flutter_native_splash: ^2.2.18
 
 dev_dependencies:
   flutter_test:
