added google nav bar as bottom navigation bar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_animate: ^4.1.0
   flutter_native_splash: ^2.2.18
   animated_bottom_navigation_bar: ^1.2.0
+  curved_navigation_bar: ^1.0.3
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
