edited design for pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   google_nav_bar: ^5.0.6
   youtube_player_flutter: ^8.1.2
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
