--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   youtube_player_flutter: ^8.1.2
   google_fonts: ^4.0.3
+  smooth_page_indicator: ^1.0.1
 
 dev_dependencies:
   flutter_test:
