--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   google_fonts: ^4.0.3
   smooth_page_indicator: ^1.0.1
+  hidable: ^1.0.3
 
 dev_dependencies:
   flutter_test:
