--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   google_fonts: ^5.1.0
   smooth_page_indicator: ^1.0.1
   hidable: ^1.0.3
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
